# Semester_Project_4

./: CMakeLists.txt  server.py  testmotor.ino
components/MPU6050/: MPU6050.c
components/PMOD-CMPS2-SPI/: CMakeLists.txt  PMOD-CMPS2-SPI.c
components/WIFI-TCP/: CMakeLists.txt  WIFI-TCP.c
components/WIFI-UDP/: CMakeLists.txt  WIFI-UDP.c
components/dshot/: CMakeLists.txt  dshot.c
components/dshot/include/: dshot.h
components/sensor_fusion/: CMakeLists.txt
components/sensor_fusion/include/: atan2d.h  mod.h  rtGetInf.h  rtGetNaN.h  rt_defines.h  rt_nonfinite.h  rtwtypes.h  sensorFusionEntryPoint.h  sensorFusionEntryPoint_data.h  sensorFusionEntryPoint_initialize.h  sensorFusionEntryPoint_terminate.h  sensorFusionEntryPoint_types.h
components/sensor_fusion/src/: atan2d.c  mod.c  rtGetInf.c  rtGetNaN.c  rt_nonfinite.c  sensorFusionEntryPoint.c  sensorFusionEntryPoint_initialize.c  sensorFusionEntryPoint_terminate.c
main/: main.c
